# intellian_Project

./: README.md  index.html  styles.css
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
intellian_app/: pubspec.yaml
intellian_app/android/app/src/main/kotlin/com/example/intellian_app/: MainActivity.kt
intellian_app/ios/Runner/: Info.plist
intellian_app/ios/Runner.xcodeproj/: project.pbxproj
intellian_app/lib/: main.dart
intellian_app/linux/: my_application.cc
intellian_app/macos/Runner.xcodeproj/: project.pbxproj
intellian_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
intellian_app/macos/Runner/Configs/: AppInfo.xcconfig
intellian_app/test/: widget_test.dart
intellian_app/web/: index.html  manifest.json
intellian_app/windows/: CMakeLists.txt
intellian_app/windows/runner/: Runner.rc  main.cpp
ios/: Podfile
iot_monitor/: scripts.js
linux/: CMakeLists.txt
my_web_server/: CMakeLists.txt  duckdns.sh  main.cpp  main.cpp.
my_web_server/duckdns/: duckdns.sh
